--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700;900&family=Roboto&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/fontawesome.min.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css');
 
 * {
     box-sizing: border-box;
@@ -7,9 +9,10 @@
 :root {
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
-    color: #333;
-    --color-primary:#ffc500;
+    --color-copy: #333;
+    --color-primary: #ffc500;
     --default-padding: 1rem;
+    color: var(--color-copy);
 }
 
 body {
@@ -36,12 +39,12 @@ ul {
 
 .navbar {
     position: fixed;
-    z-index: 1;          
+    z-index: 1;
     top: 0;
     left: 0;
     width: 100%;
     background-color: #000;
-    /* vermelho /verde / azul / transparência - 0 - F */
+    /* vermelho / verde / azul / transparência - 0 - F */
     color: #fff;
 }
 
@@ -49,11 +52,10 @@ ul {
     display: grid;
     grid-template-columns: 1fr 9fr;
     align-items: center;
-    
+
     width: 100vw;
     height: 7.75rem;
     padding: 0 1rem;
-    
 }
 
 .navbar__links {
@@ -79,14 +81,16 @@ ul {
 .logo-studion {
     font-size: 2.375rem;
     font-weight: 900;
-    line-height: 1ch; /* relativa ao tamanho da altura do glifo 0 da fonte */
+    line-height: 1ch;
+    /* relativa ao tamanho da altura do glifo 0 da fonte */
     text-transform: uppercase;
     text-align: right;
 }
 
 .logo-studion__subtitle {
+    display: block;
     font-size: 0.875rem;
-    font-weight: 300;    
+    font-weight: 300;
 }
 
 .copy--primary {
@@ -100,7 +104,7 @@ ul {
 
 .slide {
     position: relative;
-    height: calc(100vh - 7.75rem);
+    height: calc(90vh - 7.75rem);
 }
 
 .slide__background-image {
@@ -112,8 +116,14 @@ ul {
 
 .slide__copy {
     position: absolute;
-    top: 6.25rem;
-    left: 50vw;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    display: grid;
+    padding-left: 50vw;
+    align-items: center;
 }
 
 .slide__copy h6 {
@@ -121,6 +131,7 @@ ul {
     font-weight: 400;
     text-transform: uppercase;
     letter-spacing: 0.1875rem;
+    margin: 0;
 }
 
 .slide__copy h2 {
@@ -148,14 +159,14 @@ ul {
 
 .btn:hover,
 .btn:active,
-.btn:focus 
+.btn:focus,
 .btn--institutional {
     border-color: var(--color-primary);
     background-color: var(--color-primary);
     color: #fff;
 }
 
-#counter {
+.counter {
     background-color: var(--color-primary);
     color: #fff;
     text-transform: uppercase;
@@ -164,8 +175,8 @@ ul {
 .counter__container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    place-items: center;    
-    padding: 4.375rem 1rem;
+    place-items: center;
+    padding: 4.375rem 0;
 }
 
 .counter__container h3 {
@@ -190,7 +201,7 @@ ul {
 }
 
 .institutional__copy {
-    padding: 0 1.875rem 0 0;
+    padding: 0 1.875rem;
 }
 
 .institutional__copy h6 {
@@ -217,11 +228,12 @@ ul {
 .btn--institutional:hover {
     color: var(--color-copy);
     background: unset;
-    box-shadow: 0 1rem 1rem #0006; /* x, y, blur, cor */
+    box-shadow: 0 1rem 1rem #0006;
+    /* x, y, blur, cor */
 }
 
 .quote {
-    background-image: url(./images/parallax.jpg);    
+    background-image: url(./images/parallax.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
@@ -241,9 +253,9 @@ ul {
 }
 
 .quote__copy h6 {
-    font-size: 0.9375rem;
+    font-size: .9375rem;
     font-weight: 400;
-    letter-spacing: 0.1875rem;
+    letter-spacing: .1875rem;
     line-height: 1.4375rem;
     max-width: 53ch;
     text-transform: uppercase;
@@ -254,8 +266,8 @@ ul {
     font-size: 5rem;
     line-height: 5rem;
     text-transform: uppercase;
-    letter-spacing: -0.1875rem;
-    margin: 1.875rem 0;    
+    letter-spacing: -.1875rem;
+    margin: 1.875rem 0;
 }
 
 .quote__copy h2 span {
@@ -266,4 +278,113 @@ ul {
     color: var(--color-copy);
     border-color: var(--color-copy);
     background: unset;
+}
+
+.footer {
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+}
+
+.footer__container {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    align-items: center;
+    border-bottom: 0.1rem solid #FFF3;
+    padding: 5rem 0;
+}
+
+.footer .logo-studion {
+    justify-self: start;
+    margin: 0;
+}
+
+.footer__form {
+    display: grid;
+    grid-template-columns: 9ch auto;
+    gap: 1.375rem;
+    align-items: center;
+}
+
+.footer__form label {
+    font-size: .875rem;
+    font-weight: 300;
+    line-height: 1rem;
+}
+
+.footer__form__email {
+    display: grid;
+    grid-template-columns: auto 3.375rem;
+}
+
+.footer__form input {
+    background-color: var(--color-primary);
+    border: unset;
+    font-size: .875rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    padding: 1rem;
+    color: #000;
+}
+
+.footer__form input::placeholder {
+    color: #000;
+}
+
+.footer__form button {
+    cursor: pointer;
+    transition: 0.3s all ease;
+}
+
+.footer__form button:hover {
+    background-color: #000;
+    color: #FFF;
+}
+
+.footer__social {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    gap: .5rem;
+    justify-self: end;
+}
+
+.footer__social a,
+.footer__social a:hover,
+.footer__social a:visited {
+    color: white;
+}
+
+.footer__social .fa-twitter {
+    color: #000;
+}
+
+.footer p {
+    margin: 2.5rem 0;
+}
+
+.footer__form button:hover {    
+    background-color: #000;
+    color: #fff;
+}
+
+.footer__social {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    gap: 0.5rem;
+    justify-self: end;    
+}
+
+.footer__social a,
+.footer__social a:hover,
+.footer__social a:visited {
+    color: white;    
+}
+
+.footer__social .fa-twitter {
+    color: #000;
+}
+
+.footer p {
+
+    margin: 2.5rem 0;
 }
