--- a/src/css/_home.css
+++ b/src/css/_home.css
@@ -29,6 +29,16 @@
     content: "";
 }
 
+.slick-arrow {
+    visibility: hidden;
+}
+
+@media screen and (min-width: 1280px) {
+    .slick-arrow {
+        visibility: visible;
+    }
+}
+
 .slide {
     position: relative;
     height: 90vh;
@@ -42,27 +52,37 @@
     object-position: center;
 }
 
-/* .slide__copy {
+/* Mobile */
+.slide__copy {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
 
-    display: grid;
-    padding-left: 50vw;
+    display: grid;    
     align-items: center;
-} */
+    text-align: center;
+} 
 
-.slide__copy {
-    position: absolute;
-    top: 0;
-    left: 50vw;
-    margin-top: 10rem;
+.slide__copy span {
+    display: block;
+}
+
+/* Desktop */
+@media screen and (min-width: 1280px) {
+    .slide__copy {
+      padding-left: 50vw;
+      text-align: unset;
+    }
+
+   .slide__copy span {
+    display: inline;
+   }
 }
 
 .slide__copy h6 {
-    font-size: 0.9375rem;
+    font-size: 0.7rem;
     font-weight: 400;
     text-transform: uppercase;
     letter-spacing: 0.1875rem;
@@ -70,10 +90,16 @@
 }
 
 .slide__copy h2 {
-    font-size: 6.25rem;
-    text-transform: uppercase;
-    line-height: 6.25rem;
-    margin: 1.875rem 0;
+    font-size: 3.25rem;
+    text-transform: uppercase; 
+    line-height: 3.25rem;
+}
+
+@media screen and (min-width: 1280px) {
+    .slide__copy h2 {
+        font-size: 6.25rem;
+        line-height: 6.25rem;
+    }
 }
 
 .slide__copy h2 span {
@@ -102,20 +128,42 @@
     font-size: 1.25rem;
 }
 
+/* Mobile */
 .institutional {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
     gap: 3.125rem;
     align-items: center;
-    padding: 4.375rem;
+    padding: 0 0 4.375rem 0;
+}
+
+/* Desktop */
+@media screen and (min-width: 1280px) {
+    .institutional {
+        grid-template-columns: auto auto;
+        padding: 4.375rem;
+    }
 }
 
 .institutional__image {
-    max-width: 550px;
+    max-width: 100vw;
+}
+
+@media screen and (min-width: 1280px) {
+    .institutional__image {
+        max-width: 550px;
+    }
 }
 
 .institutional__copy {
-    padding: 0 1.875rem;
+    padding: 0 1rem 1.875rem 1rem; /*mobile*/
+}
+
+/* Desktop */
+@media screen and (min-width: 1280px) {
+    .institutional__copy {
+        padding: 0 1.875rem;
+    }
 }
 
 .institutional__copy h6 {
@@ -141,27 +189,47 @@
 
 .quote {
     background-image: url(../images/parallax.jpg);
-    background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    background-size: auto 40%;
+    background-position: 40% top;
+}
+
+@media screen and (min-width: 720px) {
+    .quote {
+      background-attachment: fixed;
+      background-size: cover;
+      background-position: center;
+    }
 }
 
 .quote__container {
     display: grid;
-    align-items: center;
+    align-items: end;
     justify-items: end;
-    min-height: 80vh;
+    min-height: 100vh;
+}
+
+@media screen and (min-width: 720px) {
+    .quote__container {
+        align-items: center;
+        min-height: 80vh;
+    }
 }
 
 .quote__copy {
     background-color: #fff;
-    padding: 5.625rem 4.375rem;
-    margin: 7.5625rem 0;
+    padding: 1rem;
+    padding-bottom: 4rem;
+}
+
+@media screen and (min-width: 1280px) {
+    .quote__copy {
+        padding: 5.625rem 4.375rem;
+    }
 }
 
 .quote__copy h6 {
-    font-size: 0.9375rem;
+    font-size: 0.8rem;
     font-weight: 400;
     letter-spacing: 0.1875rem;
     line-height: 1.4375rem;
@@ -171,8 +239,8 @@
 }
 
 .quote__copy h2 {
-    font-size: 5rem;
-    line-height: 5rem;
+    font-size: 4rem;
+    line-height: 4rem;
     text-transform: uppercase;
     letter-spacing: -0.1875rem;
     margin: 1.875rem 0;
@@ -180,4 +248,15 @@
 
 .quote__copy h2 span {
     display: block;
+}
+
+@media screen and (min-width: 1280px) {
+    .quote__copy h6 {
+        font-size: 0.9375rem;
+    }
+
+    .quote__copy h2 {
+        font-size: 5rem;
+        line-height: 5rem;
+    }
 }
